プログラムを修正し機能に関する説明を追記した

--- a/views/suziate.ejs
+++ b/views/suziate.ejs
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>丁半</title>
+    <title>数字当て</title>
 </head>
 <body>
     <p>あなたの選んだ数字は<%= your %>です</p>
