--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html lang="ja">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <title>Show message</title>
 </head>
 <body>
